# AI2022_Fanorona

./: README.md
Code/: .gitignore  CMakeLists.txt  main.cpp  main.h
Code/BoardGameWorld/: Stones.cpp  Stones.h  WorldBoard.cpp  WorldUI.cpp  WorldUI.h  stones.cpp  worldBoard.cpp  worldBoard.h  worldUI.cpp  worldUI.h
Code/HTML/: Board.html  imprint.html  index.html
Code/HTML/css/: game.css  home.css  index.css  login.css
Code/HTML/js/: board.js
Code/game/: FanoronaGame.cpp  FanoronaGame.h  StoneMoves.cpp  StoneMoves.h  fanorona-game.cpp  fanorona-game.h  notes.txt
Code/game/players/: AiPlayer.cpp  AiPlayer.h  GamePlayer.cpp  GamePlayer.h  HumanPlayer.cpp  HumanPlayer.h
Code/game/util/: Structs.h
Code/include/BoardGameAI/: BoardGameAI.h  types.h
Code/include/BoardGameWorld/: Constants.h  Stone.cpp  Stone.h  WorldBoard.cpp  WorldBoard.h  WorldUI.h
